--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@ List of NSE/BSE tickers that are likely to go up in value:<br />
   <tbody>
     <tr>
       <th rowspan="5" valign="top">To Short</th>
-      <th>HUBTOWN.NS</th>
-      <td>315.75</td>
+      <th>NMDC.NS</th>
+      <td>71.65</td>
     </tr>
     <tr>
-      <th>JAYNECOIND.NS</th>
-      <td>42.06</td>
+      <th>DLF.NS</th>
+      <td>826.30</td>
     </tr>
     <tr>
-      <th>VIMTALABS.NS</th>
-      <td>584.95</td>
+      <th>MCX.NS</th>
+      <td>8040.00</td>
     </tr>
     <tr>
-      <th>JPPOWER.NS</th>
-      <td>20.12</td>
+      <th>IDEA.NS</th>
+      <td>7.20</td>
     </tr>
     <tr>
-      <th>KELLTONTEC.NS</th>
-      <td>32.15</td>
+      <th>GLENMARK.NS</th>
+      <td>2145.30</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -186,74 +186,61 @@ List of NSE/BSE tickers that were previously suggested:<br />
   </thead>
   <tbody>
     <tr>
-      <th>2025-07-21</th>
-      <th>Small</th>
-      <th>ORIENTALTL.NS</th>
-      <td>11.43</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>2025-07-25</td>
-      <td>10.37</td>
-      <td>-9.27</td>
-    </tr>
-    <tr>
       <th rowspan="25" valign="top">2025-07-18</th>
       <th rowspan="5" valign="top">To Short</th>
-      <th>JPPOWER.NS</th>
-      <td>22.86</td>
+      <th>HINDZINC.NS</th>
+      <td>435.50</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>20.12</td>
-      <td>-11.99</td>
+      <td>439.20</td>
+      <td>0.85</td>
     </tr>
     <tr>
-      <th>GMDCLTD.NS</th>
-      <td>435.30</td>
+      <th>IEX.NS</th>
+      <td>203.14</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>434.40</td>
-      <td>-0.21</td>
+      <td>145.02</td>
+      <td>-28.61</td>
     </tr>
     <tr>
-      <th>RALLIS.NS</th>
-      <td>362.05</td>
+      <th>GLENMARK.NS</th>
+      <td>2225.50</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>357.40</td>
-      <td>-1.28</td>
+      <td>2145.30</td>
+      <td>-3.60</td>
     </tr>
     <tr>
-      <th>MANALIPETC.NS</th>
-      <td>79.25</td>
+      <th>GODREJCP.NS</th>
+      <td>1251.30</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>72.90</td>
-      <td>-8.01</td>
+      <td>1217.10</td>
+      <td>-2.73</td>
     </tr>
     <tr>
-      <th>NETWORK18.NS</th>
-      <td>61.23</td>
+      <th>BANDHANBNK.NS</th>
+      <td>187.02</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>57.70</td>
-      <td>-5.77</td>
+      <td>178.19</td>
+      <td>-4.72</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -482,59 +469,59 @@ List of NSE/BSE tickers that were previously suggested:<br />
     <tr>
       <th rowspan="25" valign="top">2025-07-15</th>
       <th rowspan="5" valign="top">To Short</th>
-      <th>COCHINSHIP.NS</th>
-      <td>1982.80</td>
-      <td>1870.70</td>
-      <td>-5.65</td>
+      <th>IOC.NS</th>
+      <td>150.65</td>
+      <td>152.35</td>
+      <td>1.13</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>1808.40</td>
-      <td>-8.80</td>
+      <td>146.96</td>
+      <td>-2.45</td>
     </tr>
     <tr>
-      <th>GRSE.NS</th>
-      <td>2801.60</td>
-      <td>2646.70</td>
-      <td>-5.53</td>
+      <th>MAZDOCK.NS</th>
+      <td>3174.50</td>
+      <td>2919.40</td>
+      <td>-8.04</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>2574.40</td>
-      <td>-8.11</td>
+      <td>2886.60</td>
+      <td>-9.07</td>
     </tr>
     <tr>
-      <th>SMLISUZU.NS</th>
-      <td>3010.60</td>
-      <td>4039.20</td>
-      <td>34.17</td>
+      <th>CUMMINSIND.NS</th>
+      <td>3546.40</td>
+      <td>3616.40</td>
+      <td>1.97</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>3799.40</td>
-      <td>26.20</td>
+      <td>3535.10</td>
+      <td>-0.32</td>
     </tr>
     <tr>
-      <th>JPPOWER.NS</th>
-      <td>23.63</td>
-      <td>21.51</td>
-      <td>-8.97</td>
+      <th>PEL.NS</th>
+      <td>1217.50</td>
+      <td>1307.20</td>
+      <td>7.37</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>20.12</td>
-      <td>-14.85</td>
+      <td>1278.40</td>
+      <td>5.00</td>
     </tr>
     <tr>
-      <th>PCJEWELLER.NS</th>
-      <td>17.35</td>
-      <td>15.18</td>
-      <td>-12.51</td>
+      <th>BAJAJ-AUTO.NS</th>
+      <td>8067.00</td>
+      <td>8397.00</td>
+      <td>4.09</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>14.55</td>
-      <td>-16.14</td>
+      <td>8075.50</td>
+      <td>0.11</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -763,59 +750,59 @@ List of NSE/BSE tickers that were previously suggested:<br />
     <tr>
       <th rowspan="25" valign="top">2025-07-06</th>
       <th rowspan="5" valign="top">To Short</th>
-      <th>GRSE.NS</th>
-      <td>2973.90</td>
+      <th>MAZDOCK.NS</th>
+      <td>3329.00</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>2574.40</td>
-      <td>-13.43</td>
+      <td>2886.60</td>
+      <td>-13.29</td>
     </tr>
     <tr>
-      <th>COCHINSHIP.NS</th>
-      <td>2057.30</td>
+      <th>IIFL.NS</th>
+      <td>474.85</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>1808.40</td>
-      <td>-12.10</td>
+      <td>516.85</td>
+      <td>8.84</td>
     </tr>
     <tr>
-      <th>KIRLOSBROS.NS</th>
-      <td>2333.00</td>
+      <th>MCX.NS</th>
+      <td>8884.50</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>1980.50</td>
-      <td>-15.11</td>
+      <td>8040.00</td>
+      <td>-9.51</td>
     </tr>
     <tr>
-      <th>PCJEWELLER.NS</th>
-      <td>16.69</td>
+      <th>HAL.NS</th>
+      <td>4993.20</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>14.55</td>
-      <td>-12.82</td>
+      <td>4552.70</td>
+      <td>-8.82</td>
     </tr>
     <tr>
-      <th>PFOCUS.NS</th>
-      <td>165.94</td>
+      <th>HINDZINC.NS</th>
+      <td>445.10</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>147.68</td>
-      <td>-11.00</td>
+      <td>439.20</td>
+      <td>-1.33</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -1044,59 +1031,59 @@ List of NSE/BSE tickers that were previously suggested:<br />
     <tr>
       <th rowspan="25" valign="top">2025-06-27</th>
       <th rowspan="5" valign="top">To Short</th>
-      <th>HSCL.NS</th>
-      <td>505.15</td>
-      <td>491.05</td>
-      <td>-2.79</td>
+      <th>ABFRL.NS</th>
+      <td>74.70</td>
+      <td>78.10</td>
+      <td>4.55</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>498.35</td>
-      <td>-1.35</td>
+      <td>73.77</td>
+      <td>-1.24</td>
     </tr>
     <tr>
-      <th>KIRLOSBROS.NS</th>
-      <td>2327.80</td>
-      <td>2314.10</td>
-      <td>-0.59</td>
+      <th>MCX.NS</th>
+      <td>8856.50</td>
+      <td>8746.50</td>
+      <td>-1.24</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>1980.50</td>
-      <td>-14.92</td>
+      <td>8040.00</td>
+      <td>-9.22</td>
     </tr>
     <tr>
-      <th>FIRSTCRY.NS</th>
-      <td>390.80</td>
-      <td>371.75</td>
-      <td>-4.87</td>
+      <th>MAZDOCK.NS</th>
+      <td>3174.00</td>
+      <td>3276.80</td>
+      <td>3.24</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>357.10</td>
-      <td>-8.62</td>
+      <td>2886.60</td>
+      <td>-9.05</td>
     </tr>
     <tr>
-      <th>RPOWER.NS</th>
-      <td>69.18</td>
-      <td>65.27</td>
-      <td>-5.65</td>
+      <th>BDL.NS</th>
+      <td>1890.10</td>
+      <td>1943.30</td>
+      <td>2.81</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>56.78</td>
-      <td>-17.92</td>
+      <td>1657.60</td>
+      <td>-12.30</td>
     </tr>
     <tr>
-      <th>JAIBALAJI.NS</th>
-      <td>134.58</td>
-      <td>127.04</td>
-      <td>-5.60</td>
+      <th>ATGL.NS</th>
+      <td>682.45</td>
+      <td>656.50</td>
+      <td>-3.80</td>
       <td></td>
       <td></td>
       <td>2025-07-25</td>
-      <td>114.98</td>
-      <td>-14.56</td>
+      <td>624.10</td>
+      <td>-8.55</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -1325,15 +1312,48 @@ List of NSE/BSE tickers that were previously suggested:<br />
     <tr>
       <th rowspan="25" valign="top">2025-06-20</th>
       <th rowspan="5" valign="top">To Short</th>
-      <th>BEML.NS</th>
-      <td>4639.50</td>
-      <td>4457.40</td>
-      <td>-3.92</td>
-      <td>4373.20</td>
-      <td>-5.74</td>
+      <th>BHARTIARTL.NS</th>
+      <td>1936.70</td>
+      <td>2009.60</td>
+      <td>3.76</td>
+      <td>1909.20</td>
+      <td>-1.42</td>
       <td>2025-07-25</td>
-      <td>4148.70</td>
-      <td>-10.58</td>
+      <td>1937.90</td>
+      <td>0.06</td>
+    </tr>
+    <tr>
+      <th>TIINDIA.NS</th>
+      <td>2926.30</td>
+      <td>3109.00</td>
+      <td>6.24</td>
+      <td>2937.90</td>
+      <td>0.40</td>
+      <td>2025-07-25</td>
+      <td>2889.00</td>
+      <td>-1.27</td>
+    </tr>
+    <tr>
+      <th>BDL.NS</th>
+      <td>1902.00</td>
+      <td>1943.20</td>
+      <td>2.17</td>
+      <td>1718.40</td>
+      <td>-9.65</td>
+      <td>2025-07-25</td>
+      <td>1657.60</td>
+      <td>-12.85</td>
+    </tr>
+    <tr>
+      <th>MAZDOCK.NS</th>
+      <td>3256.40</td>
+      <td>3244.30</td>
+      <td>-0.37</td>
+      <td>2951.70</td>
+      <td>-9.36</td>
+      <td>2025-07-25</td>
+      <td>2886.60</td>
+      <td>-11.36</td>
     </tr>
     <tr>
       <th>BAJFINANCE.NS</th>
@@ -1345,39 +1365,6 @@ List of NSE/BSE tickers that were previously suggested:<br />
       <td>2025-07-25</td>
       <td>913.75</td>
       <td>0.97</td>
-    </tr>
-    <tr>
-      <th>ENDURANCE.NS</th>
-      <td>2576.00</td>
-      <td>2770.10</td>
-      <td>7.53</td>
-      <td>2628.90</td>
-      <td>2.05</td>
-      <td>2025-07-25</td>
-      <td>2579.40</td>
-      <td>0.13</td>
-    </tr>
-    <tr>
-      <th>RTNPOWER.NS</th>
-      <td>13.89</td>
-      <td>15.52</td>
-      <td>11.74</td>
-      <td>15.07</td>
-      <td>8.50</td>
-      <td>2025-07-25</td>
-      <td>13.34</td>
-      <td>-3.96</td>
-    </tr>
-    <tr>
-      <th>STLTECH.NS</th>
-      <td>105.95</td>
-      <td>105.24</td>
-      <td>-0.67</td>
-      <td>116.82</td>
-      <td>10.26</td>
-      <td>2025-07-25</td>
-      <td>117.29</td>
-      <td>10.70</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -1606,59 +1593,59 @@ List of NSE/BSE tickers that were previously suggested:<br />
     <tr>
       <th rowspan="25" valign="top">2025-06-13</th>
       <th rowspan="5" valign="top">To Short</th>
-      <th>DATAPATTNS.NS</th>
-      <td>2848.20</td>
-      <td>3023.70</td>
-      <td>6.16</td>
-      <td>2862.70</td>
-      <td>0.51</td>
+      <th>BAJFINANCE.NS</th>
+      <td>9180.50</td>
+      <td>915.50</td>
+      <td>-90.03</td>
+      <td>918.85</td>
+      <td>-89.99</td>
       <td>2025-07-25</td>
-      <td>2677.40</td>
-      <td>-6.00</td>
+      <td>913.75</td>
+      <td>-90.05</td>
     </tr>
     <tr>
-      <th>GRSE.NS</th>
-      <td>3003.20</td>
-      <td>3492.70</td>
-      <td>16.30</td>
-      <td>2669.00</td>
-      <td>-11.13</td>
+      <th>MAZDOCK.NS</th>
+      <td>3478.20</td>
+      <td>3342.60</td>
+      <td>-3.90</td>
+      <td>3113.60</td>
+      <td>-10.48</td>
       <td>2025-07-25</td>
-      <td>2574.40</td>
-      <td>-14.28</td>
+      <td>2886.60</td>
+      <td>-17.01</td>
     </tr>
     <tr>
-      <th>APOLLO.NS</th>
-      <td>188.92</td>
-      <td>214.00</td>
-      <td>13.28</td>
-      <td>184.24</td>
-      <td>-2.48</td>
+      <th>HAL.NS</th>
+      <td>4974.10</td>
+      <td>5028.20</td>
+      <td>1.09</td>
+      <td>4886.20</td>
+      <td>-1.77</td>
       <td>2025-07-25</td>
-      <td>171.90</td>
-      <td>-9.01</td>
+      <td>4552.70</td>
+      <td>-8.47</td>
     </tr>
     <tr>
-      <th>RPOWER.NS</th>
-      <td>58.10</td>
-      <td>62.60</td>
-      <td>7.75</td>
-      <td>65.29</td>
-      <td>12.38</td>
+      <th>SBICARD.NS</th>
+      <td>1007.00</td>
+      <td>955.90</td>
+      <td>-5.07</td>
+      <td>903.50</td>
+      <td>-10.28</td>
       <td>2025-07-25</td>
-      <td>56.78</td>
-      <td>-2.27</td>
+      <td>888.50</td>
+      <td>-11.77</td>
     </tr>
     <tr>
-      <th>KPEL.NS</th>
-      <td>554.55</td>
-      <td>504.70</td>
-      <td>-8.99</td>
-      <td>503.20</td>
-      <td>-9.26</td>
+      <th>ABFRL.NS</th>
+      <td>73.80</td>
+      <td>74.67</td>
+      <td>1.18</td>
+      <td>76.60</td>
+      <td>3.79</td>
       <td>2025-07-25</td>
-      <td>516.95</td>
-      <td>-6.78</td>
+      <td>73.77</td>
+      <td>-0.04</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -1887,15 +1874,48 @@ List of NSE/BSE tickers that were previously suggested:<br />
     <tr>
       <th rowspan="24" valign="top">2025-05-30</th>
       <th rowspan="5" valign="top">To Short</th>
-      <th>RPOWER.NS</th>
-      <td>58.10</td>
-      <td>64.62</td>
-      <td>11.22</td>
-      <td>70.29</td>
-      <td>20.98</td>
+      <th>NMDC.NS</th>
+      <td>71.17</td>
+      <td>74.00</td>
+      <td>3.98</td>
+      <td>70.00</td>
+      <td>-1.64</td>
       <td>2025-07-25</td>
-      <td>56.78</td>
-      <td>-2.27</td>
+      <td>71.65</td>
+      <td>0.67</td>
+    </tr>
+    <tr>
+      <th>IRB.NS</th>
+      <td>51.27</td>
+      <td>53.16</td>
+      <td>3.69</td>
+      <td>49.61</td>
+      <td>-3.24</td>
+      <td>2025-07-25</td>
+      <td>46.49</td>
+      <td>-9.32</td>
+    </tr>
+    <tr>
+      <th>BLUESTARCO.NS</th>
+      <td>1532.30</td>
+      <td>1569.40</td>
+      <td>2.42</td>
+      <td>1635.60</td>
+      <td>6.74</td>
+      <td>2025-07-25</td>
+      <td>1747.20</td>
+      <td>14.02</td>
+    </tr>
+    <tr>
+      <th>HFCL.NS</th>
+      <td>87.59</td>
+      <td>91.99</td>
+      <td>5.02</td>
+      <td>86.54</td>
+      <td>-1.20</td>
+      <td>2025-07-25</td>
+      <td>75.94</td>
+      <td>-13.30</td>
     </tr>
     <tr>
       <th>ABFRL.NS</th>
@@ -1907,39 +1927,6 @@ List of NSE/BSE tickers that were previously suggested:<br />
       <td>2025-07-25</td>
       <td>73.77</td>
       <td>-14.07</td>
-    </tr>
-    <tr>
-      <th>ITI.NS</th>
-      <td>346.60</td>
-      <td>330.60</td>
-      <td>-4.62</td>
-      <td>336.65</td>
-      <td>-2.87</td>
-      <td>2025-07-25</td>
-      <td>303.40</td>
-      <td>-12.46</td>
-    </tr>
-    <tr>
-      <th>IFCI.NS</th>
-      <td>67.42</td>
-      <td>67.22</td>
-      <td>-0.30</td>
-      <td>65.17</td>
-      <td>-3.34</td>
-      <td>2025-07-25</td>
-      <td>58.63</td>
-      <td>-13.04</td>
-    </tr>
-    <tr>
-      <th>MMTC.NS</th>
-      <td>85.77</td>
-      <td>73.79</td>
-      <td>-13.97</td>
-      <td>72.77</td>
-      <td>-15.16</td>
-      <td>2025-07-25</td>
-      <td>67.13</td>
-      <td>-21.73</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -2155,19 +2142,7 @@ List of NSE/BSE tickers that were previously suggested:<br />
       <td>21.16</td>
     </tr>
     <tr>
-      <th rowspan="21" valign="top">2025-04-11</th>
-      <th>To Short</th>
-      <th>MRF.NS</th>
-      <td>117544.40</td>
-      <td>126800.00</td>
-      <td>7.87</td>
-      <td>139925.00</td>
-      <td>19.04</td>
-      <td>2025-07-25</td>
-      <td>149210.00</td>
-      <td>26.94</td>
-    </tr>
-    <tr>
+      <th rowspan="20" valign="top">2025-04-11</th>
       <th rowspan="5" valign="top">Small</th>
       <th>COLABCLOUD.BO</th>
       <td>111.11</td>
