--- a/index.html
+++ b/index.html
@@ -62,6 +62,27 @@ List of NSE/BSE tickers that are likely to go up in value:<br />
       <td>132.09</td>
     </tr>
     <tr>
+      <th rowspan="5" valign="top">Small</th>
+      <th>SAMPRE.BO</th>
+      <td>55.05</td>
+    </tr>
+    <tr>
+      <th>STEELXIND.NS</th>
+      <td>10.28</td>
+    </tr>
+    <tr>
+      <th>ISWL.BO</th>
+      <td>9.82</td>
+    </tr>
+    <tr>
+      <th>AVANCE.BO</th>
+      <td>1.42</td>
+    </tr>
+    <tr>
+      <th>MEGASOFT.NS</th>
+      <td>115.91</td>
+    </tr>
+    <tr>
       <th rowspan="5" valign="top">Medium</th>
       <th>PARAS.BO</th>
       <td>633.05</td>
