aug1 updated results

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ th { background-color: #f0f0f0; }
 <h1 style="text-align:center;">NSE/BSE suggested shares</h1>
 <p style="text-align:center;">Updated on 2025-08-01</p>
 <p style="max-width:800px; margin:auto; font-size:16px;">
-List of NSE/BSE tickers that are likely to go up in value:<br /> 
+List of NSE/BSE tickers that are likely to go up (or down) in value:<br /> 
 <br /> 
 </p>
 
@@ -42,24 +42,24 @@ List of NSE/BSE tickers that are likely to go up in value:<br />
   <tbody>
     <tr>
       <th rowspan="5" valign="top">To Short</th>
-      <th>HINDZINC.NS</th>
-      <td>415.40</td>
-    </tr>
-    <tr>
-      <th>LAURUSLABS.NS</th>
-      <td>849.35</td>
-    </tr>
-    <tr>
-      <th>DABUR.NS</th>
-      <td>534.35</td>
+      <th>SUNPHARMA.NS</th>
+      <td>1629.70</td>
     </tr>
     <tr>
       <th>PEL.NS</th>
       <td>1197.10</td>
     </tr>
     <tr>
-      <th>IEX.NS</th>
-      <td>132.09</td>
+      <th>SBICARD.NS</th>
+      <td>803.95</td>
+    </tr>
+    <tr>
+      <th>MCX.NS</th>
+      <td>7595.50</td>
+    </tr>
+    <tr>
+      <th>LAURUSLABS.NS</th>
+      <td>849.35</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Small</th>
@@ -67,20 +67,20 @@ List of NSE/BSE tickers that are likely to go up in value:<br />
       <td>55.05</td>
     </tr>
     <tr>
-      <th>STEELXIND.NS</th>
-      <td>10.28</td>
+      <th>GNRL.BO</th>
+      <td>74.55</td>
     </tr>
     <tr>
-      <th>ISWL.BO</th>
-      <td>9.82</td>
+      <th>CPML.BO</th>
+      <td>2312.90</td>
     </tr>
     <tr>
       <th>AVANCE.BO</th>
       <td>1.42</td>
     </tr>
     <tr>
-      <th>MEGASOFT.NS</th>
-      <td>115.91</td>
+      <th>GGAUTO.BO</th>
+      <td>284.75</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Medium</th>
@@ -92,58 +92,58 @@ List of NSE/BSE tickers that are likely to go up in value:<br />
       <td>777.40</td>
     </tr>
     <tr>
-      <th>BAJAJHIND.NS</th>
-      <td>22.98</td>
+      <th>ZUARIIND.NS</th>
+      <td>291.35</td>
     </tr>
     <tr>
-      <th>BALRAMCHIN.NS</th>
-      <td>563.15</td>
+      <th>DCI.NS</th>
+      <td>221.90</td>
     </tr>
     <tr>
-      <th>TRIVENI.NS</th>
-      <td>340.80</td>
+      <th>DIAMONDYD.NS</th>
+      <td>965.15</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Large</th>
-      <th>AWL.NS</th>
-      <td>257.30</td>
+      <th>HCC.NS</th>
+      <td>25.85</td>
     </tr>
     <tr>
-      <th>EIDPARRY.NS</th>
-      <td>1204.60</td>
+      <th>WENDT.NS</th>
+      <td>9826.50</td>
     </tr>
     <tr>
-      <th>AIIL.NS</th>
-      <td>2756.30</td>
+      <th>MAHSCOOTER.NS</th>
+      <td>15271.00</td>
     </tr>
     <tr>
-      <th>KANSAINER.NS</th>
-      <td>250.05</td>
+      <th>KALAMANDIR.NS</th>
+      <td>171.63</td>
     </tr>
     <tr>
-      <th>INDIASHLTR.NS</th>
-      <td>903.75</td>
+      <th>YATHARTH.NS</th>
+      <td>636.55</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">Extra Large</th>
-      <th>TIMEX.BO</th>
-      <td>244.75</td>
-    </tr>
-    <tr>
-      <th>HDFCBANK.NS</th>
-      <td>2012.20</td>
-    </tr>
-    <tr>
-      <th>ADANIENT.NS</th>
-      <td>2350.90</td>
-    </tr>
-    <tr>
-      <th>HINDALCO.NS</th>
-      <td>672.45</td>
+      <th>RPOWER.NS</th>
+      <td>50.09</td>
     </tr>
     <tr>
       <th>BOSCHLTD.NS</th>
       <td>40390.00</td>
+    </tr>
+    <tr>
+      <th>NEULANDLAB.NS</th>
+      <td>13017.00</td>
+    </tr>
+    <tr>
+      <th>IEX.NS</th>
+      <td>132.09</td>
+    </tr>
+    <tr>
+      <th>TIMEX.BO</th>
+      <td>244.75</td>
     </tr>
   </tbody>
 </table>
