--- a/index.html
+++ b/index.html
@@ -148,6 +148,128 @@ List of NSE/BSE tickers that are likely to go up (or down) in value:<br />
   </tbody>
 </table>
     
+<h1 style="text-align:center;">Portfolio Recommendation</h1>
+<p style="text-align:center;">Updated on 2025-09-12</p>
+<p style="max-width:800px; margin:auto; font-size:16px;">
+Current Portfolio:<br /> 
+<br /> 
+</p>
+
+    <table class="dataframe">
+  <thead>
+    <tr style="text-align: center;">
+      <th>ticker</th>
+      <th>price</th>
+      <th>active</th>
+      <th>stock_tracked</th>
+      <th>stock_in_top10</th>
+      <th>stock_in_top20</th>
+      <th>stock_in_top50</th>
+      <th>current_price</th>
+      <th>current_date</th>
+      <th>Return</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>ETERNAL.NS</td>
+      <td>330.75</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>IEX.NS</td>
+      <td>134.16</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>142.860001</td>
+      <td>2025-09-09</td>
+      <td>1.064848</td>
+    </tr>
+    <tr>
+      <td>ITC.NS</td>
+      <td>416.15</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>410.049988</td>
+      <td>2025-09-09</td>
+      <td>0.985342</td>
+    </tr>
+    <tr>
+      <td>MAHSCOOTER.NS</td>
+      <td>14914.00</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>17979.000000</td>
+      <td>2025-09-12</td>
+      <td>1.205512</td>
+    </tr>
+    <tr>
+      <td>ROSEMER.BO</td>
+      <td>112.22</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>81.029999</td>
+      <td>2025-09-09</td>
+      <td>0.722064</td>
+    </tr>
+    <tr>
+      <td>SAREGAMA.NS</td>
+      <td>477.89</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>500.000000</td>
+      <td>2025-09-09</td>
+      <td>1.046266</td>
+    </tr>
+    <tr>
+      <td>SBIN.NS</td>
+      <td>823.35</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>823.549988</td>
+      <td>2025-09-12</td>
+      <td>1.000243</td>
+    </tr>
+    <tr>
+      <td>TCS.NS</td>
+      <td>3099.60</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
+    
 <h1 style="text-align:center;">Previous Lists</h1>
 <p style="text-align:center;">Updated before 2025-09-12</p>
 <p style="max-width:800px; margin:auto; font-size:16px;">
